[gd_scene load_steps=31 format=3 uid="uid://b27clm84kjvqd"]

[ext_resource type="Texture2D" uid="uid://b28ax0xcvv135" path="res://assets/Enemies/dragon/IDLE.png" id="1_28nwr"]
[ext_resource type="Shader" uid="uid://4l703uteubdf" path="res://shaders/enemy-hit-flash.tres" id="1_h74qm"]
[ext_resource type="Script" path="res://scenes/enemies/dragon-boss/dragon.gd" id="1_rhvc3"]
[ext_resource type="Texture2D" uid="uid://dmbtsp4hw7uuu" path="res://assets/Enemies/dragon/WALK.png" id="2_ri60m"]
[ext_resource type="Texture2D" uid="uid://d28mgab6w14ws" path="res://assets/Enemies/dragon/ATTACK.png" id="3_npdld"]
[ext_resource type="Texture2D" uid="uid://wqs7y2p3wpck" path="res://assets/Enemies/dragon/HURT.png" id="4_ok1q4"]
[ext_resource type="Texture2D" uid="uid://dns3hyf1rfxre" path="res://assets/Enemies/dragon/DEATH.png" id="5_1aswq"]
[ext_resource type="Script" path="res://fsm/base-state/state-machine.gd" id="6_i14l6"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-wander.gd" id="7_ccrcr"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-follow.gd" id="8_algn1"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-attack.gd" id="9_7icjb"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-hit.gd" id="10_jsany"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-death.gd" id="11_vu4n7"]
[ext_resource type="PackedScene" uid="uid://tiwuf42urbrg" path="res://scenes/components/healthcomp/enemy/enemy_health_comp.tscn" id="12_2e1hm"]
[ext_resource type="Script" path="res://scenes/components/hitbox/hitbox.gd" id="13_madts"]
[ext_resource type="Script" path="res://scenes/components/attackcomp/attack_component.gd" id="14_ynxrs"]
[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/fonts/joystix monospace.otf" id="15_d0vfe"]
[ext_resource type="PackedScene" uid="uid://dfnl3gfcu8o67" path="res://scenes/components/HP-bar/enemy/enemy_hp_bar.tscn" id="16_33ewc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wtym"]
resource_local_to_scene = true
shader = ExtResource("1_h74qm")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_niakd"]
resource_name = "dragon-attack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_npdld")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyHealthComp/Hitbox/HitboxCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_gvq10"]
resource_name = "dragon-death"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_1aswq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EnemyHealthComp/Hurtbox/HurtboxCollision:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r87t6"]
resource_name = "dragon-hit"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ok1q4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_sc07u"]
resource_name = "dragon-idle"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_28nwr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_p36iw"]
resource_name = "dragon-run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ri60m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgxq1"]
_data = {
"dragon-attack": SubResource("Animation_niakd"),
"dragon-death": SubResource("Animation_gvq10"),
"dragon-hit": SubResource("Animation_r87t6"),
"dragon-idle": SubResource("Animation_sc07u"),
"dragon-run": SubResource("Animation_p36iw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7ils7"]
radius = 22.3607

[sub_resource type="CircleShape2D" id="CircleShape2D_uj2rf"]
radius = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n38q5"]
size = Vector2(53, 35)

[sub_resource type="Animation" id="Animation_86xlx"]
resource_name = "hit-flash"
length = 0.15
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ffg0m"]
_data = {
"hit-flash": SubResource("Animation_86xlx")
}

[node name="Dragon" type="CharacterBody2D"]
script = ExtResource("1_rhvc3")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6wtym")
position = Vector2(-16, 0)
texture = ExtResource("1_28nwr")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dgxq1")
}

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_7ils7")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_i14l6")
initial_state = NodePath("EnemyWander")

[node name="EnemyWander" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("7_ccrcr")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")

[node name="EnemyFollow" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("8_algn1")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")
direction_val = 55

[node name="EnemyAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp", "timer")]
script = ExtResource("9_7icjb")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")
timer = NodePath("Timer")
player_length = 55

[node name="Timer" type="Timer" parent="StateMachine/EnemyAttack"]
wait_time = 3.0

[node name="EnemyHit" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health", "attack")]
script = ExtResource("10_jsany")
actor = NodePath("../..")
enemy_health = NodePath("../../EnemyHealthComp")
attack = NodePath("../../EnemyHealthComp/AttackComponent")

[node name="EnemyDeath" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("11_vu4n7")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")

[node name="EnemyHealthComp" parent="." node_paths=PackedStringArray("enemy_hp_bar", "anim_effects", "dmg_num_pos") instance=ExtResource("12_2e1hm")]
enemy_hp_bar = NodePath("CanvasLayer/EnemyHPbar")
anim_effects = NodePath("../AnimEffects")
dmg_num_pos = NodePath("../DmgNumPos")

[node name="HurtboxCollision" type="CollisionShape2D" parent="EnemyHealthComp/Hurtbox" index="0"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_uj2rf")
debug_color = Color(0.994851, 0, 0.215299, 0.42)

[node name="Hitbox" type="Area2D" parent="EnemyHealthComp"]
script = ExtResource("13_madts")

[node name="HitboxCollision" type="CollisionShape2D" parent="EnemyHealthComp/Hitbox"]
position = Vector2(-67.5, 10)
shape = SubResource("RectangleShape2D_n38q5")
disabled = true
debug_color = Color(1.44392e-07, 0.645657, 0.255219, 0.42)

[node name="AttackComponent" type="Node2D" parent="EnemyHealthComp"]
script = ExtResource("14_ynxrs")

[node name="CanvasLayer" type="CanvasLayer" parent="EnemyHealthComp"]
visible = false

[node name="Label" type="Label" parent="EnemyHealthComp/CanvasLayer"]
offset_left = 383.0
offset_top = 814.0
offset_right = 594.0
offset_bottom = 876.0
theme_override_fonts/font = ExtResource("15_d0vfe")
theme_override_font_sizes/font_size = 51
text = "DRAGON"
horizontal_alignment = 1

[node name="EnemyHPbar" parent="EnemyHealthComp/CanvasLayer" instance=ExtResource("16_33ewc")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -184.0
offset_right = -334.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(5, 5)

[node name="DmgNumPos" type="Node2D" parent="."]
position = Vector2(0, -30)

[node name="AnimEffects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ffg0m")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.2, 2.7)

[connection signal="timeout" from="StateMachine/EnemyAttack/Timer" to="StateMachine/EnemyAttack" method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="EnemyHealthComp"]
